--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
-<html>
+<html ng-app="FutureBet">
 	<head>
 		<title>Future Bet App</title>
-		<link href="static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-		<script src="static/jquery/dist/jquery.min.js"></script>
-		<script src="static/bootstrap/dist/js/bootstrap.min.js"></script>
-		
+		<link href="/static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+		<script src="/static/jquery/dist/jquery.min.js"></script>
+		<script src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="/static/angular/angular.min.js"></script>
+		<script src="/static/angular-route/angular-route.min.js"></script>
+		<base href="/">
 	</head>
 	<body>
 		<h1>Betting app</h1>
-		<form action="/users/new" method="post">
+		<a href="bets">Bets</a>
+
+		<div ng-view></div>
+
+		<!--<form action="/users/new" method="post">
 		  <div class="form-group">
 		    <label for="name">Name</label>
 		    <input type="text" class="form-control" id="name" placeholder="name" name="name">
@@ -18,6 +24,11 @@
 		    <input type="password" class="form-control" id="password" placeholder="password" name="password">
 		  </div>
 		  <button type="submit" class="btn btn-default">Submit</button>
-		</form>
+		</form>-->
+
+		<script src="app/app.js"></script>
+		<script src="app/bets/bets.controllers.js"></script>
+		<script src="app/bets/bets.routes.js"></script>
+
 	</body>
 </html>
