--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html ng-app="FutureBet">
 	<head>
 		<title>Future Bet App</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 		<script src="/static/jquery/dist/jquery.min.js"></script>
 		<script src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
