--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
 		<title>Future Bet App</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/static/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/bootswatch-slate.min.css" rel="stylesheet">
 		<script src="/static/jquery/dist/jquery.min.js"></script>
 		<script src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/static/angular/angular.min.js"></script>
 		<script src="/static/angular-route/angular-route.min.js"></script>
 		<script src="/static/angular-resource/angular-resource.min.js"></script>
+        <script src="/css/bootstrap"></script>
 		<style>
 			body { padding-top:70px }
 		</style>
