--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,7 @@
 		<script src="app/matches/matches.controllers.js"></script>
 		<script src="app/matches/matches.routes.js"></script>
 
+		<script src="app/login/login.routes.js"></script>
+		<script src="app/login/login.controllers.js"></script>
 	</body>
 </html>
