--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
 		<script src="/static/angular-route/angular-route.min.js"></script>
 		<script src="/static/angular-resource/angular-resource.min.js"></script>
         
+		<script src="/static/angular-cookies/angular-cookies.min.js"></script>
+		<script src="/static/angular-http-auth/dist/http-auth-interceptor.min.js"></script>
+
         <script src="/static/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
         
 
@@ -43,5 +46,9 @@
 
 		<script src="app/login/login.routes.js"></script>
 		<script src="app/login/login.controllers.js"></script>
+		<script src="app/login/login.resources.js"></script>
+		<script src="app/login/login.services.js"></script>
+
+		<script src="app/authentication/authentication.config.js"></script>
 	</body>
 </html>
